# azimuth

./: .env.example  .envrc  .gitignore  .taplo.toml  Cargo.toml  README.md  deny.toml  flake.nix  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.config/: hakari.toml
crates/azimuth-core/: Cargo.toml
crates/azimuth-core/src/: lib.rs
crates/azimuth-drone/: Cargo.toml
crates/azimuth-drone/src/: main.rs
crates/azimuth-firmware-pico/: Cargo.toml
crates/azimuth-firmware-pico/src/: main.rs
crates/azimuth-firmware-sim/: Cargo.toml
crates/azimuth-firmware-sim/src/: main.rs
crates/azimuth-gui/: Cargo.toml
crates/azimuth-gui/src/: main.rs
crates/azimuth-hal/: Cargo.toml
crates/azimuth-hal-pico/: Cargo.toml
crates/azimuth-hal-sim/: Cargo.toml
crates/azimuth-hal-sim/src/: lib.rs
crates/delta/: Cargo.toml
crates/delta/src/: main.rs
crates/gauge/: Cargo.toml
crates/gauge/src/: main.rs
crates/workspace-hack/: Cargo.toml
crates/workspace-hack/src/: lib.rs
minimal/: main.rs
