[workspace]
members = [
  "crates/azimuth-core",
  "crates/azimuth-firmware-pico",
  "crates/azimuth-firmware-sim",
  "crates/azimuth-gui",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Maximilian Dietrich <m.dietrich16@web.de>"]
license = "MIT OR Apache-2.0"

[workspace.metadata.crane]
name = "azimuth"
