cargo-features = ["per-package-target"]

[package]
name = "azimuth-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
default-target = "x86_64-unknown-linux-gnu"

[features]
default = ["std"]
std = []

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }
