cargo-features = ["per-package-target"]

[package]
name = "azimuth-firmware-pico"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false
default-target = "thumbv6m-none-eabi"

[[bin]]
name = "azimuth-firmware-pico"
test = false
doctest = false
bench = false

[dependencies]
azimuth-core = { path = "../azimuth-core", default-features = false }

rp-pico = "0.9"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
