cargo-features = ["per-package-target"]

[package]
name = "azimuth-firmware-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
azimuth-core = { path = "../azimuth-core" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }
