cargo-features = ["per-package-target"]

[package]
name = "gauge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
forced-target = "x86_64-unknown-linux-gnu"

[dependencies]
workspace-hack = { version = "0.1", path = "../workspace-hack" }
